loaded news details

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         ></ul>
       </nav>
     </header>
+    <main class="max-w-7xl mx-auto px-5">
+      <div id="newsContainer" class="grid grid-cols-4 gap-5 mt-5"></div>
+    </main>
 
     <script src="script.js"></script>
   </body>
